--- a/04/2/4.2A.tex
+++ b/04/2/4.2A.tex
@@ -165,7 +165,7 @@
     1110	1110\\
     1117.5	1117.5\\
     };
-    \addlegendentry{unbalance}
+    \addlegendentry{Unbalance}
     
     \addplot [black]
       table[row sep=crcr]{%
