--- a/05/2/5.2.1.tex
+++ b/05/2/5.2.1.tex
@@ -917,7 +917,7 @@ grid=major,
 17880	107.039496287743\\
 17940	107.238667656429\\
 };
-\addplot [cyan, forget plot]
+\addplot [green, forget plot]
   table[row sep=crcr]{%
 60	107.473294103906\\
 120	107.574980911479\\
