--- a/05/4/5.4A.tex
+++ b/05/4/5.4A.tex
@@ -2,7 +2,7 @@
 
     \begin{axis}[%
     width=1\linewidth,
-    height=1.3\linewidth,
+    height=0.9\linewidth,
     xmin=0,
     xmax=300,
     xlabel={Angular Velocity [\si{\hertz}]},
@@ -315,7 +315,7 @@
     298	298\\
     299	299\\
     };
-    \addlegendentry{unbalance}
+    \addlegendentry{Unbalance}
     
     \addplot [color=black]
       table[row sep=crcr]{%
