--- a/05/1/5.1.4K.tex
+++ b/05/1/5.1.4K.tex
@@ -7,7 +7,7 @@
 \definecolor{mycolor1}{rgb}{0.00000,0.44700,0.74100}%
 \definecolor{mycolor2}{rgb}{0.85000,0.32500,0.09800}%
 %
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=0.56]
 
 \begin{axis}[%
 width=1.858in,
